app/assets/stylesheets/partials/modules/widgets/_map-micello.scss
/* ======================================================================================
   @MODULES -> WIDGETS -> MAP MICELLO
   ====================================================================================== */

/*
  Usage:
    3rd party Map API from 'Micello'.

  Demo:
    Style Guide -> Modules -> Widgets -> Map Micello
*/

.map-micello {

  /* --Global rules-- */

  /* No bottom spacing */
  p {margin-bottom: 0;}

  /* Apply bottom spacing */
  .map-micello__mrg-base {@include to-rem(margin-bottom, $spacing-half);}

  /* Turn off text selection styles */
  * {@include prefix(user-select, none);}
}

/* Static version - remove all interaction and UI elements generated by 3rd party API */
.map-micello--static {pointer-events: none;}

  /* API container + overlay that disables all map interaction */
  .map-micello__api,
  .map-micello__disable-interaction {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
  }

    /* --Overlay-- */
    .map-micello__overlay-wrap {display: none;}

      .map-micello__overlay {
        @include to-rem(padding-top, $spacing-half+$spacing-third);

        /* Increase top padding for active store */
        &.is-active-store {@include to-rem(padding-top, $spacing-half+$spacing-third+$spacing-half);}

        /* Make button clickable for static view */
        .map-micello--static & .btn--main {pointer-events: auto;}
      }

        /* Header */
        .map-micello__hdr {
          @include font-size($font-size, 1.2);
          font-weight: bold;
          display: block;
        }

        /* Retailer logo and details (name + open till time) */
        .map-micello__overlay__retailer {
          position: relative;
          @include to-rem(padding-left, 95);

          /* Make linear for static version at this breakpoint range */
          @include respond-range($non-palm, $ipad-portrait - 1) {
            .map-micello--static & {padding-left: 0;}
          }

          /* Remove the indent when there is no logo */
          .is-no-store-logo & {padding-left: 0;}
        }

          /* Logo */
          .map-micello__overlay__retailer__img {
            width: 84px;
            position: absolute;
            left: 0;
            top: 0;

            /* Remove the indent when there is no logo */
            .is-no-store-logo & {display: none;}

            /* Make linear for static version at this breakpoint range */
            @include respond-range($non-palm, $ipad-portrait - 1) {
              .map-micello--static & {
                position: static;
                @include to-rem(margin-bottom, $spacing-quarter);
                margin: 0 auto;
                width: 108px;
              }
            }
          }

          /* Hide the 'Store details' link at this breakpoint for the relevant store in 'Stores show' */
          .map-micello__overlay.is-active-store {
            a.map-micello__overlay__cta.btn {display: none;}

            /* Hide both the button and the link at this breakpoint */
            @include respond-min($ipad-landscape) {
              .map-micello__overlay__cta.btn  {display: none;}
            }
          }

        /* Faux close button */
        .map-micello__overlay__close {
          position: absolute;
          @include to-rem(top, 2);
          @include to-rem(right, 3);
          color: $color-light-txt;

          /* Static version */
          .map-micello--static & {display: none;}
        }
/* ... */

